# OOP_COURSE4-ParsingJobs-

./: README.md  main.py  pyproject.toml
classes_dir/: abc_class.py  data_save_class.py  hh_api.py  super_job_api.py  vacancy_info.py
src/: abc_class.py  data_save_class.py  func.py  hh_api.py  super_job_api.py  vacancy_info.py
