[tool.poetry]
name = "oop-course4(parsingjobs)"
version = "0.1.0"
description = ""
authors = ["WHAT <ygyshka0@gmail.com>"]
readme = "README.md"
packages = [{include = "oop_course4(parsingjobs)"}]

[tool.poetry.dependencies]
python = "^3.11"
pyflakes = "^3.0.1"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
